trying to render a success page

--- a/views/ListOfBooks.hbs
+++ b/views/ListOfBooks.hbs
@@ -1,7 +1,8 @@
 <h1> Here you will find the books titles we shared by alphabetical order </h1>
-//here I will have a space to enter the name of the book. When I click on "submit"
-it will lead me to the book page where I will have the name of the book and the 
-summary. 
-If I only type a first few letters of a book it will lead me to a page with a list 
-of suggestions. When I click on what I want, it will bring me to the book page with the 
-name and summary. 
+//here I will have a space to enter the name of the book. When I click on
+"submit" it will lead me to the book page where I will have the name of the book
+and the summary. If I only type a first few letters of a book it will lead me to
+a page with a list of suggestions. When I click on what I want, it will bring me
+to the book page with the name and summary. //1) We need to have data in the
+database //2) What will be the book model (check mongoose recipee lab). How
+wouldI structre //my models?
