--- a/views/contact-us.hbs
+++ b/views/contact-us.hbs
@@ -1,1 +1,5 @@
 <p> Welcome to the contact page </p>
+<form action="/auth/contact-us" method="POST">
+<label>
+Message
+<input type="text"  name="Message from the user" />
