--- a/views/BookCreationForum.hbs
+++ b/views/BookCreationForum.hbs
@@ -1,11 +1,13 @@
 In this section we wanna be able to have a space to submit the name of the book
 with the name of the genre and the language ( spaces and 1 submit buttons)
 
-<form action="/auth/BookCreationForum" method="POST">
+<form action="/BookCreationForum" method="POST">
   <label>
+    Title
     <input type="text" name="title" />
   </label>
   <label>
+    Author
     <input type="text" name="author" />
   </label>
   <button type="submit"> Submit </button>
