--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,6 +1,6 @@
 <form action="/auth/signup" method="POST">
-  //It is like writing a letter. We wanna send (post in our case) a letter but
-  we need to know the destination (auth/signup over here)
+  <!-- It is like writing a letter. We wanna send (post in our case) a letter but
+  we need to know the destination (auth/signup over here) -->
   <label>
     Username
     <input type="text" name="username" />
